Fix politician card responsibility on mobile devices

--- a/src/app/modules/party/page/party.component.scss
+++ b/src/app/modules/party/page/party.component.scss
@@ -53,7 +53,7 @@
   }
 
   @media only screen and (max-width: $bp-mobile) {
-    grid-template-columns: [center-start] 1fr [center-end];
+    grid-template-columns: [center-start] minmax(20rem, 1fr) [center-end];
     gap: 2rem;
   }
 }
